--- a/components/navbar8.html
+++ b/components/navbar8.html
@@ -61,15 +61,15 @@
           <div data-thq="thq-navbar-nav" class="navbar8-desktop-menu">
             <nav class="navbar8-links1">
               <a href="https://www.teleporthq.io">
-                <fragment class="navbar8-fragment17">
-                  <span class="navbar8-text19 thq-link thq-body-small">
+                <fragment class="navbar8-fragment16">
+                  <span class="navbar8-text16 thq-link thq-body-small">
                     Home
                   </span>
                 </fragment>
               </a>
               <a href="https://www.teleporthq.io">
-                <fragment class="navbar8-fragment16">
-                  <span class="navbar8-text18 thq-link thq-body-small">
+                <fragment class="navbar8-fragment15">
+                  <span class="navbar8-text15 thq-link thq-body-small">
                     About
                   </span>
                 </fragment>
@@ -77,7 +77,7 @@
               <div class="navbar8-link4-dropdown-trigger">
                 <a href="contact.html" class="navbar8-link51">
                   <fragment class="navbar8-fragment14">
-                    <span class="navbar8-text16 thq-link thq-body-small">
+                    <span class="navbar8-text14 thq-link thq-body-small">
                       Contact
                     </span>
                   </fragment>
@@ -103,11 +103,6 @@
           <div data-thq="thq-mobile-menu" class="navbar8-mobile-menu">
             <div class="navbar8-nav">
               <div class="navbar8-top">
-                <img
-                  alt="Portfolio Logo"
-                  src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/84ec08e8-34e9-42c7-9445-d2806d156403/fac575ac-7a41-484f-b7ac-875042de11f8?org_if_sml=1&amp;force_format=original"
-                  class="navbar8-logo"
-                />
                 <div data-thq="thq-close-menu" class="navbar8-close-menu">
                   <svg viewBox="0 0 1024 1024" class="navbar8-icon14">
                     <path
@@ -117,49 +112,38 @@
                 </div>
               </div>
               <nav class="navbar8-links2">
-                <a href="https://www.teleporthq.io">
-                  <fragment class="navbar8-fragment17">
-                    <span class="navbar8-text19 thq-link thq-body-small">
+                <a href="index.html" class="navbar8-link12">
+                  <fragment class="navbar8-fragment16">
+                    <span class="navbar8-text16 thq-link thq-body-small">
                       Home
                     </span>
                   </fragment>
                 </a>
-                <a href="https://www.teleporthq.io">
-                  <fragment class="navbar8-fragment16">
-                    <span class="navbar8-text18 thq-link thq-body-small">
+                <a href="about.html" class="navbar8-link22">
+                  <fragment class="navbar8-fragment15">
+                    <span class="navbar8-text15 thq-link thq-body-small">
                       About
                     </span>
                   </fragment>
                 </a>
-                <a
-                  href="https://www.teleporthq.io"
-                  class="navbar8-link3 thq-link thq-body-small"
-                >
-                  Portfolio
-                </a>
                 <div class="navbar8-link4-accordion">
                   <div class="navbar8-trigger">
-                    <span>
+                    <a href="contact.html" class="navbar8-link52">
                       <fragment class="navbar8-fragment14">
-                        <span class="navbar8-text16 thq-link thq-body-small">
+                        <span class="navbar8-text14 thq-link thq-body-small">
                           Contact
                         </span>
                       </fragment>
-                    </span>
+                    </a>
                     <div class="navbar8-icon-container2">
                       <div class="navbar8-container3">
                         <svg viewBox="0 0 1024 1024" class="navbar8-icon16">
                           <path d="M298 426h428l-214 214z"></path>
                         </svg>
                       </div>
-                      <div class="navbar8-container4">
-                        <svg viewBox="0 0 1024 1024" class="navbar8-icon18">
-                          <path d="M426 726v-428l214 214z"></path>
-                        </svg>
-                      </div>
                     </div>
                   </div>
-                  <div class="navbar8-container5">
+                  <div class="navbar8-container4">
                     <a href="https://www.teleporthq.io">
                       <div class="navbar8-menu-item1">
                         <img
@@ -169,15 +153,15 @@
                         />
                         <div class="navbar8-content1">
                           <span>
-                            <fragment class="navbar8-fragment20">
-                              <span class="navbar8-text22 thq-body-large">
+                            <fragment class="navbar8-fragment19">
+                              <span class="navbar8-text19 thq-body-large">
                                 Home
                               </span>
                             </fragment>
                           </span>
                           <span>
                             <fragment class="navbar8-fragment12">
-                              <span class="navbar8-text14 thq-body-small">
+                              <span class="navbar8-text12 thq-body-small">
                                 Welcome to my portfolio page showcasing my work
                                 and skills.
                               </span>
@@ -196,14 +180,14 @@
                         <div class="navbar8-content2">
                           <span>
                             <fragment class="navbar8-fragment13">
-                              <span class="navbar8-text15 thq-body-large">
+                              <span class="navbar8-text13 thq-body-large">
                                 About
                               </span>
                             </fragment>
                           </span>
                           <span>
                             <fragment class="navbar8-fragment10">
-                              <span class="navbar8-text12 thq-body-small">
+                              <span class="navbar8-text10 thq-body-small">
                                 Learn more about me and my background.
                               </span>
                             </fragment>
@@ -223,8 +207,8 @@
                             Portfolio
                           </span>
                           <span>
-                            <fragment class="navbar8-fragment18">
-                              <span class="navbar8-text20 thq-body-small">
+                            <fragment class="navbar8-fragment17">
+                              <span class="navbar8-text17 thq-body-small">
                                 Explore some of my featured projects.
                               </span>
                             </fragment>
@@ -241,15 +225,15 @@
                         />
                         <div class="navbar8-content4">
                           <span>
-                            <fragment class="navbar8-fragment19">
-                              <span class="navbar8-text21 thq-body-large">
+                            <fragment class="navbar8-fragment18">
+                              <span class="navbar8-text18 thq-body-large">
                                 Contact
                               </span>
                             </fragment>
                           </span>
                           <span>
                             <fragment class="navbar8-fragment11">
-                              <span class="navbar8-text13 thq-body-small">
+                              <span class="navbar8-text11 thq-body-small">
                                 Get in touch with me for collaborations or
                                 inquiries.
                               </span>
@@ -261,16 +245,7 @@
                   </div>
                 </div>
               </nav>
-              <div class="navbar8-buttons2">
-                <button class="thq-button-filled">
-                  <span>
-                    <fragment class="navbar8-fragment15">
-                      <span class="navbar8-text17">Toggle Dark Mode</span>
-                    </fragment>
-                  </span>
-                </button>
-                <button class="thq-button-outline"><span>Submit</span></button>
-              </div>
+              <div class="navbar8-buttons2"></div>
             </div>
             <div class="navbar8-icon-group">
               <svg
@@ -295,7 +270,7 @@
             </div>
           </div>
         </header>
-        <div class="navbar8-container6"></div>
+        <div class="navbar8-container5"></div>
       </header>
     </div>
     <script
